# SpiceFlow

./: README.md
.cargo/: config.toml
client/: main.py  pyproject.toml
client/spiceflow_client/: order_book.py
client/spiceflow_client/gen_templates/: OrderBook.py  (+1 more)
fixtures/: .gitignore
flat-buffer/client/: order_book.fbs
flat-buffer/templates/: order_book.fbs
scripts/: binance_exchange_info_fixtures.py  gen_py_fb_templates.sh
server/: Cargo.toml  build.rs
server/src/: lib.rs  main.rs
server/src/actors/: bc.rs  mod.rs  ob.rs  orch.rs  order_book_generated.rs  router.rs  stream_config.rs  ws.rs
server/src/async_actors/: broadcast.rs  common.rs  messages.rs  mod.rs  orchestrator.rs  subscription.rs
server/src/async_actors/deribit/: mod.rs  orderbook.rs  router.rs  websocket.rs
server/src/async_actors/orchestrator/: actions.rs  common.rs  errors.rs  meta.rs  mod.rs  orch.rs  tasks.rs
server/src/async_actors/websocket/: binance.rs  deribit.rs  mod.rs
server/src/devtools/: fixtures.rs  mod.rs
server/src/domain/: mod.rs  sub.rs
server/src/domain/instrument/: binance.rs  deribit.rs  mod.rs
server/src/domain/instrument_static/: binance.rs  deribit.rs  mod.rs  types.rs
server/src/domain/ref_data/: binance.rs  deribit.rs  instruments.rs  mod.rs  types.rs
server/src/domain/subscription/: mod.rs
server/src/gen_templates/: mod.rs  order_book.rs
server/src/http_api/: handle.rs  mock_ref_data.rs  mod.rs  request_handler.rs  requests.rs
server/src/model/: mod.rs
server/src/templates/: README.md  mod.rs  order_book.fbs  order_book_generated.rs
